--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -44,7 +44,7 @@ tags: [CV, Emacs, Python, Literate Programming]
   | Introduction to Data Science | StackOverFlow |                |
   |                              | LinkedIn      |                |
 
-* \beta Skills overview
+* \Sigma{}kills overview
   
 ** Emacs and a plethora of satellite packages
 
@@ -54,12 +54,12 @@ tags: [CV, Emacs, Python, Literate Programming]
    - OOP design patterns scrutiny
 
 
-* \gamma Current state
+* \zeta{}urrent state
   Following the concept of /knowledge chain reaction/\trade I'm in conveying
   my own skills to my family: my patient, wise&cute wife and to my
   astute sonny. 
 
-* \Delta Desired role
+* \Delta{}esired role
   - A team catalyst, accelerator and propeller. Who next will fall in
     love with Emacs and Python simultaneously?
   - Synergy in the team is not just only a sum of knowledge, our goal
