--- a/2017-03-10-oop-design-patterns-overview.org
+++ b/2017-03-10-oop-design-patterns-overview.org
@@ -1,8 +1,8 @@
 #+BEGIN_EXPORT html
 ---
 layout: post
-title: Python3 OOP design
-tagline: " patterns overview"
+title: OOP design patterns
+tagline: " definition"
 permalink: /python3/design/patterns/overview.html
 categories: [literate programming, emacs, Python3]
 tags: [OOP, design, patterns]
