--- a/2017-03-09-design-patterns.org
+++ b/2017-03-09-design-patterns.org
@@ -1,8 +1,8 @@
 #+BEGIN_EXPORT html
 ---
 layout: post
-title: Python3 OOP design
-tagline: " patterns overview"
+title: Design patterns
+tagline: " overview"
 permalink: /python3/design/patterns/introduction.html
 categories: [literate programming, emacs, Python3]
 tags: [OOP, design, patterns, intro]
