--- a/2017-03-28-neural-network-architecture.org
+++ b/2017-03-28-neural-network-architecture.org
@@ -355,69 +355,71 @@ An overview of the main types of neural network architecture
    - A weight vector defines a plane in data-space.
    - The weight plane is perpendicular to the weight vector and misses
      the origin by a distance equal to the threshold.
- 1,1
- 0,1
- weigh
- 0,0
- t plane
- outpu
- t
- outpu =1
- t =0
- 1,0
- The positive and negative cases
- cannot be separated by a planeDiscriminating simple patterns
- under translation with wrap-around
-   Suppose we just use pixels as
- the features.
-   Can a binary threshold unit
- discriminate between different
- patterns that have the same
- number of on pixels?
-   - Not if the patterns can
- translate with wrap-around!
- pattern A
- pattern A
- pattern A
- pattern B
- pattern B
- pattern BSketch of a proof that a binary decision unit cannot
- discriminate patterns with the same number of on pixels
- (assuming translation with wraparound)
- • 
- • 
- • 
- For pattern A, use training cases in all possible translations.
+
+** Discriminating simple patterns under translation with wrap-around
+
+   #+CAPTION: Simple patterns discrimination
+   #+ATTR_HTML: :alt Perceptron limitation :title Sketch view :align right
+   #+ATTR_HTML: :width 50%
+   [[http://0--key.github.io/assets/img/neural_networks/simple_patterns.png]]
+
+   Suppose we just use pixels as the features. Can a binary threshold
+   unit discriminate between different patterns that have the same
+   number of on pixels?
+   - *Not* if the patterns can translate with wrap-around!
+
+** Sketch of a proof
+   that a binary decision unit cannot discriminate patterns with the
+   same number of on pixels (assuming translation with wraparound)
+
+   For pattern A, use training cases in all possible translations.
    - Each pixel will be activated by 4 different translations of pattern A.
-   - So the total input received by the decision unit over all these patterns will
- be four times the sum of all the weights.
- For pattern B, use training cases in all possible translations.
+   - So the total input received by the decision unit over all these
+     patterns will be four times the sum of all the weights.
+
+   For pattern B, use training cases in all possible translations.
    - Each pixel will be activated by 4 different translations of pattern B.
-   - So the total input received by the decision unit over all these patterns will
- be four times the sum of all the weights.
- But to discriminate correctly, every single case of pattern A must provide more
- input to the decision unit than every single case of pattern B.
-   - This is impossible if the sums over cases are the same.Why this result is devastating for Perceptrons
-   The whole point of pattern recognition is to recognize patterns despite
- transformations like translation.
-   Minsky and Papert’s “Group Invariance Theorem” says that the part of
- a Perceptron that learns cannot learn to do this if the transformations
- form a group.
+   - So the total input received by the decision unit over all these
+     patterns will be four times the sum of all the weights.
+
+   But to discriminate correctly, every single case of pattern A must
+   provide more input to the decision unit than every single case of
+   pattern B.
+   - This is impossible if the sums over cases are the same.
+
+
+** Why this result is devastating for Perceptrons
+
+   The whole point of pattern recognition is to recognize patterns
+   despite transformations like translation.
+
+   Minsky and Papert’s “Group Invariance Theorem” says that the part
+   of a Perceptron that learns cannot learn to do this if the
+   transformations form a group.
+
    - Translations with wrap-around form a group.
-   To deal with such transformations, a Perceptron needs to use multiple
- feature units to recognize transformations of informative sub-patterns.
+
+   To deal with such transformations, a Perceptron needs to use
+   multiple feature units to recognize transformations of informative
+   sub-patterns.
+
    - So the tricky part of pattern recognition must be solved by the
- hand-coded feature detectors, not the learning procedure.Learning with hidden units
- • 
- • 
- Networks without hidden units are very limited in the input-output mappings they
- can learn to model.
+     hand-coded feature detectors, not the learning procedure.
+
+** Learning with hidden units
+
+   Networks without hidden units are very limited in the input-output
+   mappings they can learn to model.
+
    - More layers of linear units do not help. Its still linear.
    - Fixed output non-linearities are not enough.
- We need multiple layers of adaptive, non-linear hidden units. But how can we
- train such nets?
-   - We need an efficient way of adapting all the weights, not just the last layer.
- This is hard.
-   - Learning the weights going into hidden units is equivalent to learning features.
-   - This is difficult because nobody is telling us directly what the hidden units
- should do.
+
+   We need multiple layers of *adaptive*, non-linear hidden units. But
+   how can we train such nets?
+
+   - We need an efficient way of /adapting all the weights/, not just
+     the last layer. This is hard.
+   - Learning the weights going into hidden units is equivalent to
+     learning features.
+   - This is difficult because nobody is telling us directly what the
+     hidden units should do.
