--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -78,10 +78,18 @@ tags: [CV, Emacs, Python, Literate Programming]
   - A team catalyst, accelerator and propeller. Who next will fall in
     love with Emacs and Python simultaneously?
   - Synergy in the team is not just only a sum of knowledge, our goal
-    is to obtain its product literally: *\sum knowledge_{i} \to \prod knowledge_{i}*
+    is to obtain its product literally:
+    #+BEGIN_QUOTE
+    \sum knowledge_{i} \to \prod knowledge_{i}
+    #+END_QUOTE
   - Right now for professional growth I'm crucially need in /knowledge
     exchange/: who knows something fascinating and would share it with
     me, please?
+
+
+* Test
+   #+HTML_MATHJAX: \left [ – \frac{\hbar^2}{2 m} \frac{\partial^2}{\partial x^2} + V \right ] \Psi = i \hbar \frac{\partial}{\partial t} \Psi
+
 
 
 * Appropriate solution                                             :noexport:
