--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -13,7 +13,7 @@ tags: [CV, Emacs, Python, Literate Programming]
 #+SUBTITLE:  Would you like to unleash the team synergy?
 #+EMAIL:     a.s.kosinov@gmail.com
 #+LANGUAGE: en
-#+OPTIONS: toc:nil num:nil
+#+OPTIONS: toc:nil num:nil tex:t
 #+LaTeX_HEADER: \usepackage[T1]{fontenc}
 #+LaTeX_HEADER: \usepackage{mathpazo}
 #+LaTeX_HEADER: \linespread{1.05}
