--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -95,6 +95,11 @@ x=\sqrt{b}
 \left [ – \frac{\hbar^2}{2 m} \frac{\partial^2}{\partial x^2} + V \right ] \Psi = i \hbar \frac{\partial}{\partial t} \Psi
 \end{equation}
 
+* Test #2
+
+  If $a^2=b$ and \( b=2 \), then the solution must be
+  either $$ a=+\sqrt{2} $$ or \[ a=-\sqrt{2} \].
+
 
 
 * Appropriate solution                                             :noexport:
