--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -80,7 +80,7 @@ tags: [CV, Emacs, Python, Literate Programming]
   - Synergy in the team is not just only a sum of knowledge, our goal
     is to obtain its product literally:
     #+BEGIN_QUOTE
-    \sum knowledge_{i} \to \prod knowledge_{i}
+    $\displaystyle\sum_{n=1}^{team}\sum_{k=1}^{skill}\to\prod_{n=1}^{team}\sum_{k=1}^{skill}$
     #+END_QUOTE
   - Right now for professional growth I'm crucially need in /knowledge
     exchange/: who knows something fascinating and would share it with
