--- a/2016-10-13-CV.org
+++ b/2016-10-13-CV.org
@@ -77,11 +77,14 @@ tags: [CV, Emacs, Python, Literate Programming]
 * \Delta{}esired role
   - A team catalyst, accelerator and propeller. Who next will fall in
     love with Emacs and Python simultaneously?
-  - Synergy in the team is not just only a sum of knowledge, our goal
-    is to obtain its product literally:
+  - A synergy among the team is not just only a sum of knowledge, our
+    goal is to obtain its product literally:
     #+BEGIN_QUOTE
     $\displaystyle\sum_{n=1}^{team}\sum_{k=1}^{skill}\to\prod_{n=1}^{team}\sum_{k=1}^{skill}$
     #+END_QUOTE
+  - In other words the desired aim should be a /knowledge
+    multiplication/: sustainable state of continuous intellectual
+    progress each team member in particular.
   - Right now for professional growth I'm crucially need in /knowledge
     exchange/: who knows something fascinating and would share it with
     me, please?
