--- a/2017-04-03-linear-neuron-weights-learning.org
+++ b/2017-04-03-linear-neuron-weights-learning.org
@@ -120,30 +120,17 @@ tags: [linear neuron, neuron's weights]
    #+ATTR_HTML: :width 40%
    [[http://0--key.github.io/assets/img/neural_networks/first_iteration.png]]
 
-   •  Residual error = 350
-   •  The “delta-rule” for learning is:
+   •  Residual error = 350 The “delta-rule” for learning is:
 
-   price of meal = 500
-   Δw i = ε x i (t − y)
-   50
-   2
-   portions
-   of fish
-   50
-   5
-   portions
-   of chips
-   50
-   3
-   portions of
-   ketchup
+   price of meal = 500 Δw i = ε x i (t − y) 50 2 portions of fish 50 5
+   portions of chips 50 3 portions of ketchup
 
    • With a learning rate ε of 1/35, the weight changes are +20, +50,
    +30
 
-   •  This gives new weights of 70, 100, 80.
+   • This gives new weights of 70, 100, 80.
 
-   –  Notice that the weight for chips got worse!
+   – Notice that the weight for chips got worse!
 
 ** Deriving the delta rule
 
